[package]
name = "lycanthropy"
version = "0.1.0"
authors = ["Gabriel Wu <qqbbnease1004@126.com>"]

[dependencies]
actix-web = { git = "https://github.com/actix/actix-web" }
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.13"
env_logger = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"